<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2023 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="camera_not_ready">Camera Loading…</string>

    <string name="capture_mode_image_capture_content_description">Image capture mode</string>
    <string name="capture_mode_video_recording_content_description">Video recording mode</string>

    <string name="settings_content_description">Settings</string>
    <string name="flip_camera_content_description">Flip Camera</string>

    <string name="audio_visualizer_icon">An icon of a microphone</string>
    <string name="zoom_scale_text">%1$.2fx</string>

    <string name="debug_text_physical_camera_id_prefix">Physical ID: </string>
    <string name="debug_text_logical_camera_id_prefix">Logical ID: </string>

    <string name="toast_image_capture_success">Image Capture Success</string>
    <string name="toast_video_capture_success">Video Capture Success</string>

    <string name="toast_capture_failure">Image Capture Failure</string>
    <string name="toast_video_capture_failure">Video Capture Failure</string>
    <string name="toast_video_capture_external_unsupported">Video not supported while app is in image-only capture mode</string>
    <string name="toast_image_capture_external_unsupported">Image capture not supported while app is in video-only capture mode</string>
    <string name="toast_image_capture_unsupported_concurrent_camera">Image capture not supported in dual camera mode</string>
    <string name="stabilization_icon_description_auto">Stabilization is on</string>
    <string name="stabilization_icon_description_preview_and_video">Preview is Stabilized</string>
    <string name="stabilization_icon_description_video_only">Only Video is Stabilized</string>
    <string name="stabilization_icon_description_optical">Optical stabilization is Enabled</string>
    <string name="video_quality_description_sd">Video quality is SD</string>
    <string name="video_quality_description_hd">Video quality is HD</string>
    <string name="video_quality_description_fhd">Video quality is FHD</string>
    <string name="video_quality_description_uhd">Video quality is UHD</string>
    <string name="toast_hdr_photo_unsupported_on_device">Ultra HDR photos not supported on this device</string>
    <string name="toast_hdr_photo_unsupported_on_lens">Ultra HDR photos not supported by current lens</string>
    <string name="toast_hdr_photo_unsupported_on_lens_single_stream">Single-stream mode does not support UltraHDR photo capture for current lens</string>
    <string name="toast_hdr_photo_unsupported_on_lens_multi_stream">Multi-stream mode does not support UltraHDR photo capture for current lens</string>
    <string name="toast_hdr_video_unsupported_on_device">HDR video not supported on this device</string>
    <string name="toast_hdr_video_unsupported_on_lens">HDR video not supported by current lens</string>


    <string name="quick_settings_front_camera_text">FRONT</string>
    <string name="quick_settings_back_camera_text">BACK</string>
    <string name="quick_settings_front_camera_description">Front Camera</string>
    <string name="quick_settings_back_camera_description">Back Camera</string>

    <string name="quick_settings_aspect_ratio_3_4">3:4</string>
    <string name="quick_settings_aspect_ratio_9_16">9:16</string>
    <string name="quick_settings_aspect_ratio_1_1">1:1</string>

    <string name="quick_settings_dynamic_range_sdr">SDR</string>
    <string name="quick_settings_dynamic_range_hdr">HDR</string>
    <string name="quick_settings_dynamic_range_sdr_description">Standard dynamic range</string>
    <string name="quick_settings_dynamic_range_hdr_description">High dynamic range</string>

    <string name="quick_settings_aspect_ratio_3_4_description">3 to 4 aspect ratio</string>
    <string name="quick_settings_aspect_ratio_9_16_description">9 to 16 aspect ratio</string>
    <string name="quick_settings_aspect_ratio_1_1_description">1 to 1 aspect ratio</string>

    <string name="quick_settings_flash_off">OFF</string>
    <string name="quick_settings_flash_auto">AUTO</string>
    <string name="quick_settings_flash_on">ON</string>
    <string name="quick_settings_flash_llb">LLB</string>
    <string name="quick_settings_flash_off_description">Flash off</string>
    <string name="quick_settings_flash_auto_description">Auto flash</string>
    <string name="quick_settings_flash_on_description">Flash on</string>
    <string name="quick_settings_flash_llb_description">Low Light Boost on</string>

    <string name="quick_settings_capture_mode_single">Single Stream</string>
    <string name="quick_settings_capture_mode_multi">Multi Stream</string>
    <string name="quick_settings_capture_mode_single_description">Single-stream capture mode on</string>
    <string name="quick_settings_capture_mode_multi_description">Multi-stream capture mode on</string>

    <string name="quick_settings_dropdown_open_description">Quick settings open</string>
    <string name="quick_settings_dropdown_closed_description">Quick settings closed</string>

    <string name="quick_settings_lowlightboost_enabled">Low light boost on</string>
    <string name="quick_settings_lowlightboost_disabled">Low light boost off</string>
    <string name="quick_settings_lowlightboost_enabled_description">Low light boost on</string>
    <string name="quick_settings_lowlightboost_disabled_description">Low light boost off</string>

    <string name="quick_settings_concurrent_camera_off">SINGLE</string>
    <string name="quick_settings_concurrent_camera_dual">DUAL</string>
    <string name="quick_settings_concurrent_camera_off_description">Concurrent cameras off</string>
    <string name="quick_settings_concurrent_camera_dual_description">Concurrent dual camera on</string>

    <string name="quick_settings_frequency_shots_per_day">shots per day</string>
    <string name="quick_settings_frequency_1_per_day">1 shot per day</string>
    <string name="quick_settings_frequency_2_per_day">2 shots per day</string>
    <string name="quick_settings_frequency_4_per_day">4 shots per day</string>
    <string name="quick_settings_frequency_6_per_day">6 shots per day</string>
    <string name="quick_settings_frequency_12_per_day">12 shots per day</string>
    <string name="quick_settings_frequency_24_per_day">24 shots per day</string>
    <string name="quick_settings_frequency_30_per_day">30 shots per day</string>
    <string name="quick_settings_frequency_60_per_day">60 shots per day</string>
    <string name="quick_settings_frequency_120_per_day">120 shots per day</string>
</resources>
